<resources>
    <string name="app_name">Quiz</string>
    <string name="logo">logo</string>
    <string name="quiz1">Technologie Internetowe</string>
    <string name="quiz2">Język Java</string>
    <string name="demo">Rozwiąż test demo</string>
    <string name="hello">Witaj!</string>
    <string name="testName">Przed Tobą test o nazwie: %s \nz tematu %s</string>
    <string name="rules">ZASADY:\nJest to test %s wyboru.\nCzas na rozwiązanie testu wynosi: %d min.
        \nNależy zaznaczyć jedynie poprawne odpowiedzi.\nTest zawiera %d pytań, każde za 1 punkt.\nIlość punktów możliwa do zdobycia wynosi %d.</string>
    <string name="multiplyTrue">wielokrotnego</string>
    <string name="multiplyFalse">jednokrotnego</string>
    <string name="invite">Zapraszamy!</string>
    <string name="toTest">Przejdź do testu</string>
    <string name="back">Powrót</string>
    <string name="nextQuestion">Dalej</string>
    <string name="prevQuestion">Poprzednie</string>
    <string name="acceptAnswers">ZAKOŃCZ</string>
    <string name="summary">PODSUMOWANIE</string>
    <string name="summaryGet">Uzyskano:\n%d/%d pkt\n%.2f %c</string>
    <string name="summaryPositive">ZALICZONO</string>
    <string name="summaryNegative">NIEZALICZONO</string>
    <string name="seeAnswers">Zobacz odpowiedzi</string>
    <string name="seeAnswersHint">Zobacz odpowiedzi\nwczytano %d/%d</string>
    <string name="repeat">Rozwiąż ponownie</string>
    <string name="hideAnswers">Ukryj odpowiedzi</string>
    <string name="points">Punktacja:\n0 - %.0f 2.0\n%.0f - %.0f 3.0\n%.0f - %.0f 3.5\n%.0f - %.0f 4.0\n%.0f - %.0f 4.5\n%.0f - %d 5.0</string>
    <string name="pointsInline">Punktacja:\n0 - %.0f 2.0; %.0f - %.0f 3.0; %.0f - %.0f 3.5; %.0f - %.0f 4.0;\n %.0f - %.0f 4.5; %.0f - %d 5.0</string>
    <string name="showPoints">Pokaż punktację</string>
    <string name="rulesButton">Zasady</string>
    <string name="login">Zaloguj</string>
    <string name="register">Zarejestruj</string>
    <string name="loginSign">Logowanie</string>
    <string name="registerSign">Rejestracja</string>
    <string name="createNewAccount">Utwórz nowe konto</string>
    <string name="mainPanel">Panel główny</string>
    <string name="mainPanelStudent">Poniżej znajdują się quizy przygotowane dla Ciebie</string>
    <string name="logout">Wyloguj się</string>
    <string name="editProfile">Edytuj profil</string>
    <string name="editProfileString">Edycja Profilu</string>
    <string name="editted">Edycja udana</string>
    <string name="relogin">Wymagane ponowne zalogowanie się</string>
    <string name="url">http://192.168.43.89:8080%s</string>
    <string name="test">%d</string>
    <string name="title_activity_login">Sign in</string>
</resources>