<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="27dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo5_600"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="16dp" />

        <RelativeLayout
            android:id="@+id/quiz1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/imageView"
            android:background="@drawable/quizcard">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz1"
                android:textColor="@color/textWhite"
                android:textSize="30sp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/button2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="15dp"
                android:background="@color/buttonBackgroundGray"
                android:text="@string/demo"
                android:drawableEnd="@drawable/icons8_right_24"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/quiz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/quiz1"
            android:background="@drawable/quizcard">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz2"
                android:textAlignment="center"
                android:textColor="@color/textWhite"
                android:textSize="30sp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/button5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="15dp"
                android:background="@color/buttonBackgroundGray"
                android:text="@string/demo"
                android:drawableEnd="@drawable/icons8_right_24"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>