<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".TestDemoResult"
    android:background="@color/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="0dp"
        >

    <TextView
        android:id="@+id/textSumarry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/summary"
        android:textColor="@color/borderBlue"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="131dp" />

        <TextView
            android:id="@+id/textSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textSumarry"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColor="@color/textWhite"/>


        <TextView
            android:id="@+id/textSummaryPos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textSummary"
            android:layout_marginTop="0dp"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColor="@color/textWhite"/>


        <Button
            android:id="@+id/buttonRepeat"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonBack"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:background="@color/buttonBackgroundGray"
            android:text="@string/repeat" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textSummary"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="140dp"
            android:background="@color/buttonBackgroundGray"
            android:text="@string/back" />

        <Button
            android:id="@+id/buttonSeeAnswers"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonRepeat"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-120dp"
            android:background="@color/buttonBackgroundGray"
            android:text="@string/seeAnswers" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main"
            android:layout_marginTop="40dp"

            android:padding="20dp"
            android:layout_below="@+id/buttonBack"/>
    </RelativeLayout>
</ScrollView>