<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Test_demo_begin"
    android:background="@color/background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="0dp"
        >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/hello"
            android:textColor="@color/borderBlue"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="131dp" />


        <TextView
            android:id="@+id/about1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:textSize="22dp"
            android:textAlignment="center"
            android:textColor="@color/textWhite" />


        <TextView
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:textSize="16dp"
            android:textAlignment="center"
            android:textColor="@color/textWhite" />

        <Button
            android:id="@+id/buttonPoints"
            android:layout_width="160dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rules"
            android:layout_marginTop="20dp"
            android:text="@string/showPoints"
            android:background="@color/buttonBackgroundGray"/>
        <TextView
            android:id="@+id/textPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rules"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/textWhite" />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textPoints"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="50dp"
            android:text="@string/toTest"
            app:layout_constraintTop_toBottomOf="@+id/about1"
            android:background="@color/buttonBackgroundGray"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:paddingHorizontal="10dp"
            android:text="@string/back"
            android:background="@color/buttonBackgroundGray" />

    </RelativeLayout>


</ScrollView>