<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/loginSign"
            android:textColor="@color/borderBlue"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="131dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:background="@color/buttonBackgroundDisable"
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:ems="10"
            android:hint="E-mail lub login"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:background="@color/buttonBackgroundDisable"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:hint="Hasło"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="200dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="50dp"
            android:text="@string/login"
            android:background="@color/buttonBackgroundGray"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="200dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="50dp"
            android:text="@string/register"
            android:background="@color/buttonBackgroundGray"/>


    </RelativeLayout>

</ScrollView>